Proper links for all references of codec strings
This PR resolves: https://github.com/w3c/webcodecs/issues/872

--- a/aac_codec_registration.src.html
+++ b/aac_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for AAC, the (1) fully qualified codec strings, (2) the
+    It describes, for AAC, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]], (2) the
     codec-specific {{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}}
     bytes, (3) the {{AudioDecoderConfig/description|AudioDecoderConfig.description}}
     bytes, (4) the values of {{EncodedAudioChunk}} {{EncodedAudioChunk/[[type]]}},
@@ -47,7 +47,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-This codec has multiple possible codec strings:
+This codec has multiple possible [[WEBCODECS#config-codec-string|codec strings]]:
 
 - `"mp4a.40.2"` — MPEG-4 AAC LC
 - `"mp4a.40.02"` — MPEG-4 AAC LC, leading 0 for Aud-OTI compatibility
