--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for AV1, the (1) fully qualified codec strings,
+    It describes, for AV1, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]],
     (2) the codec-specific {{EncodedVideoChunk}}
     {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the codec-specific
     extensions to {{VideoEncoderConfig}}, (4) the
@@ -53,7 +53,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string begins with the prefix `"av01."`, followed by a variable length
+The [[WEBCODECS#config-codec-string|codec string]] begins with the prefix `"av01."`, followed by a variable length
 suffix as described in Section 5 of [[AV1-ISOBMFF]].
 
 EncodedVideoChunk data {#encodedvideochunk-data}
