--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for AVC (H.264), the (1) fully qualified codec strings,
+    It describes, for AVC (H.264), the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]],
     (2) the codec-specific {{EncodedVideoChunk}}
     {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
     {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
@@ -55,7 +55,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string begins with the prefix "avc1." or "avc3.", with a suffix of 6
+The [[WEBCODECS#config-codec-string|codec string]] begins with the prefix "avc1." or "avc3.", with a suffix of 6
 characters as described respectively in Section 3.4 of [[rfc6381]] and Section
 5.4.1 of [[iso14496-15]].
 
