--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -39,16 +39,16 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Organization {#organization}
 ============================
 
-This registry maintains a mapping between codec strings and registration
+This registry maintains a mapping between <a>codec strings</a> and registration
 specifications as described below.
 
 Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
-1. Each entry must include a unique codec string, a common name string, and a
+1. Each entry must include a unique <a>codec string</a>, a common name string, and a
     link to the codec's specification.
-2. The codec string must be crafted as follows:
-    1. If the codec string contains a fixed prefix with variable suffix values,
+2. The <a>codec string</a> must be crafted as follows:
+    1. If the <a>codec string</a> contains a fixed prefix with variable suffix values,
         the suffix must be represented by an asterisk and the registration's
         public specification must describe how to fully qualify the variable
         portion of the string.
@@ -79,7 +79,7 @@ Registration Entry Requirements {#registration-entry-requirements}
     The registry editors will review and merge the pull request.
 6. Existing entries cannot be deleted or deprecated. They may be changed after
     being published through the same process as candidate entries. Possible
-    changes include expansion of the codec string to better qualify the codec,
+    changes include expansion of the <a>codec string</a> to better qualify the codec,
     adjustments to the codec name string, and modification of the link to the
     codec's specification.
 
