--- a/index.src.html
+++ b/index.src.html
@@ -2013,8 +2013,7 @@ run these steps:
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderConfig>codec</dfn></dt>
-  <dd>Contains a codec string describing the codec.</dd>
-
+  <dd>Contains a <a>codec string</a> describing the codec.</dd>
   <dt><dfn dict-member for=VideoDecoderConfig>description</dfn></dt>
   <dd>
     A sequence of codec specific bytes, commonly known as extradata.
@@ -2118,7 +2117,7 @@ run these steps:
 
 <dl>
   <dt><dfn dict-member for=AudioEncoderConfig>codec</dfn></dt>
-  <dd>Contains a codec string describing the codec.</dd>
+  <dd>Contains a <a>codec string</a> describing the codec.</dd>
 
   <dt><dfn dict-member for=AudioEncoderConfig>sampleRate</dfn></dt>
   <dd>The number of frame samples per second.</dd>
