--- a/mp3_codec_registration.src.html
+++ b/mp3_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for MP3, the (1) fully qualified codec strings, (2)
+    It describes, for MP3, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]], (2)
     the {{AudioDecoderConfig/description|AudioDecoderConfig.description}} bytes,
     (3) the codec-specific {{EncodedAudioChunk}}
     {{EncodedAudioChunk/[[internal data]]}} bytes, and (4)
@@ -48,7 +48,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-This codec has multiple equivalent codec strings:
+This codec has multiple equivalent [[WEBCODECS#config-codec-string|codec strings]]:
 
 - `"mp3"`
 - `"mp4a.69"`
