--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for Opus, the (1) fully qualified codec strings, (2) the
+    It describes, for Opus, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]], (2) the
     codec-specific {{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}}
     bytes, (3) the {{AudioDecoderConfig/description|AudioDecoderConfig.description}}
     bytes, (4) the values of {{EncodedAudioChunk}} {{EncodedAudioChunk/[[type]]}},
@@ -54,7 +54,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string is `"opus"`.
+The [[WEBCODECS#config-codec-string|codec string]] is `"opus"`.
 
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
