--- a/pcm_codec_registration.src.html
+++ b/pcm_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for Linear PCM, the (1) fully qualified codec strings,
+    It describes, for Linear PCM, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]],
     (2) the codec-specific {{EncodedAudioChunk}}
     {{EncodedAudioChunk/[[internal data]]}} bytes, (3) the
     {{AudioDecoderConfig/description|AudioDecoderConfig.description}}, and
@@ -47,8 +47,8 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-This codec's string begins with the prefix "pcm-", followed by a suffix that
-indicates the sample format. The complete list of strings and associated
+This [[WEBCODECS#config-codec-string|codec string]] begins with the prefix "pcm-", followed by a suffix that
+indicates the sample format. The complete list of [[WEBCODECS#config-codec-string|codec strings]] and associated
 formats is as follows.
 
 * pcm-u8, using format {{u8}}
@@ -72,7 +72,7 @@ between two successive values are linearly uniform.
 
 {{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}} is expected to be
 a sequence of bytes of arbitrary length, with a [=sample=] occuring every N
-bits, where N is defined by the codec string. For multichannel PCM, [=samples=]
+bits, where N is defined by the [[WEBCODECS#config-codec-string|codec string]]. For multichannel PCM, [=samples=]
 from different channels are [=interleaved=].
 
 
