--- a/vorbis_codec_registration.src.html
+++ b/vorbis_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for Vorbis, the (1) fully qualified codec strings,
+    It describes, for Vorbis, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]],
     (2) the codec-specific {{EncodedAudioChunk}}
     {{EncodedAudioChunk/[[internal data]]}} bytes, (3) the
     {{AudioDecoderConfig/description|AudioDecoderConfig.description}} bytes,
@@ -52,7 +52,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string is `"vorbis"`.
+The [[WEBCODECS#config-codec-string|codec string]] is `"vorbis"`.
 
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
