--- a/vp9_codec_registration.src.html
+++ b/vp9_codec_registration.src.html
@@ -13,7 +13,7 @@ Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.mic
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for VP9, the (1) fully qualified codec strings,
+    It describes, for VP9, the (1) fully qualified [[WEBCODECS#config-codec-string|codec strings]],
     (2) the codec-specific {{EncodedVideoChunk}}
     {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
     {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
@@ -52,7 +52,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string begins with the prefix `"vp09."`, followed by a variable length
+The [[WEBCODECS#config-codec-string|codec string]] begins with the prefix `"vp09."`, followed by a variable length
 suffix as described in the "Codecs Parameter String" Section of [[VP9-ISOBMFF]].
 
 EncodedVideoChunk data {#encodedvideochunk-data}
