Fix PCM link for samples

--- a/pcm_codec_registration.src.html
+++ b/pcm_codec_registration.src.html
@@ -41,6 +41,9 @@ Markup Shorthands:css no, markdown yes, dfn yes
 spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: dfn
         text: interleaved; url: interleaved
+spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
+    type: dfn
+        text: samples; url: sample
 </pre>
 
 
@@ -71,7 +74,7 @@ values are sampled at a regular interval, and where the quantization levels
 between two successive values are linearly uniform.
 
 {{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}} is expected to be
-a sequence of bytes of arbitrary length, with a [=sample=] occuring every N
+a sequence of bytes of arbitrary length, with a [=sample=] occurring every N
 bits, where N is defined by the [[WEBCODECS#config-codec-string|codec string]]. For multichannel PCM, [=samples=]
 from different channels are [=interleaved=].
 
