AudioDecoderConfig.numberOfChannels and AudioDecoderConfig.sampleRate should be explicitly forbidden to be 0.
This fixes #878.

--- a/index.src.html
+++ b/index.src.html
@@ -1951,7 +1951,8 @@ To check if an {{AudioDecoderConfig}} is a <dfn export>valid AudioDecoderConfig<
     return `false`.
 2. If {{AudioDecoderConfig/description}} is [[=BufferSource/detached=]], return
      false.
-3. Return `true`.
+3. If {{AudioDecoderConfig/sampleRate}} or {{AudioDecoderConfig/numberOfChannels}} are equal to zero, return `false`.
+4. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=AudioDecoderConfig>codec</dfn></dt>
