--- a/index.src.html
+++ b/index.src.html
@@ -4595,7 +4595,7 @@ Integer values are unsigned unless otherwise specified.
     planes of Chroma, denoted Y, U and V, and present in this order. It is also
     often refered to as Planar YUV 4:2:0.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y plane.
 
     Each sample in this format is 8 bits.
@@ -4672,7 +4672,7 @@ Integer values are unsigned unless otherwise specified.
     present in this order. It is also often refered to as Planar YUV 4:2:0 with
     an alpha channel.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y and Alpha planes.
 
     Each sample in this format is 8 bits.
@@ -4756,7 +4756,7 @@ Integer values are unsigned unless otherwise specified.
     planes of Chroma, denoted Y, U and V, and present in this order. It is also
     often refered to as Planar YUV 4:2:2.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y plane, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 8 bits.
@@ -5005,7 +5005,7 @@ Integer values are unsigned unless otherwise specified.
     another plane for the two Chroma components. The two planes are present in
     this order, and are refered to as respectively the Y plane and the UV plane.
 
-    The U an V components are [=sub-sampled=] horizontally and vertically by a
+    The U and V components are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the components in the Y planes.
 
     Each sample in this format is 8 bits.
