mark AudioDataInit/data as AllowShared

--- a/index.src.html
+++ b/index.src.html
@@ -2853,7 +2853,7 @@ dictionary AudioDataInit {
   [EnforceRange] required unsigned long numberOfFrames;
   [EnforceRange] required unsigned long numberOfChannels;
   [EnforceRange] required long long timestamp;  // microseconds
-  required BufferSource data;
+  required AllowSharedBufferSource data;
   sequence<ArrayBuffer> transfer = [];
 };
 </xmp>
